--- a/src/styles/layout/_overlay.scss
+++ b/src/styles/layout/_overlay.scss
@@ -1,30 +1,34 @@
 mw-overlay {
-  position: absolute;
+  position: fixed;
   z-index: 100;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
   background: hsla(0, 0%, 30%, 80%);
 
   .overlay-content-container {
     position: absolute;
     z-index: 101;
-    top: calc(50% - 250px);
     opacity: 100%;
 
-    animation-name: appear;
-    animation-duration: 0.6s;
-    animation-timing-function: ease-out;
-
     @include respond-to('lt-sm') {
+      /** Centre vertically:
+        * Half-way mark vertically (50vh)
+        * minus half of the current width
+        * minus half of the fixed 20px-high header
+        */
+      top: calc(50vh - (100vw - 20px)/2 - 10px);
       left: 10px;
-      width: calc(100% - 20px);
+      width: calc(100vw - 20px);
+      animation: appear-lt-sm 0.4s ease-out;
     }
   
     @include respond-to('gt-sm') {
-      left: calc(50% - 250px);
+      top: calc(50vh - 260px);
+      left: calc(50vw - 250px);
       width: 500px;
+      animation: appear-gt-sm 0.6s ease-out;
     }
   
     header {
@@ -58,13 +62,24 @@ mw-overlay {
   }
 }
 
-@keyframes appear {
+@keyframes appear-lt-sm {
   from {
-    opacity: 40%;
-    top: calc(50% - 230px);
+    opacity: 20%;
+    top: calc(50vh - (100vw - 20px)/2 + 10px);
   }
   to {
     opacity: 100%;
-    top: calc(50% - 250px);
+    top: calc(50vh - (100vw - 20px)/2 - 10px);
+  }
+}
+
+@keyframes appear-gt-sm {
+  from {
+    opacity: 20%;
+    top: calc(50vh - 240px);
+  }
+  to {
+    opacity: 100%;
+    top: calc(50vh - 260px);
   }
 }
